      clear all the flags for routers that fall out of the networkstatus
      consensus. Fixes bug 529.

  o Minor features (router descriptor cache):
    - If we find a cached-routers file that's been sitting around for more
      than 28 days unmodified, then most likely it's a leftover from when we
      upgraded to 0.2.0.8-alpha.  Remove it.  It has no good routers anyway.

  o Minor features (performance):
    - Call routerlist_remove_old_routers() much less often.  This should
      speed startup, especially on directory caches.
    - Don't try to launch descriptor downloads quite so often when we
      have enough directory information.

  o Minor bugfixes (directory authorities):
    - Correct the implementation of "download votes by digest."  Bugfix on
      0.2.0.8-alpha.
    - Make the "next period" votes into "current period" votes immediately
      after publishing the consensus; avoid a heisenbug that made them stick
      around indefinitely.
    - When we discard a vote as a duplicate, do not report this as an error.
    - Correctly check for bad options to the "PublishServerDescriptor"
      config option. Bugfix on 0.2.0.1-alpha; reported by Matt Edman.
    - When we discard a vote as a duplicate, do not report this as an error.
    - When we're configured to be a v3 authority, but we're only listed
      as a non-v3 authority in our DirServer line for ourself, correct the
      listing.
    - Treat missing v3 keys or certificates as an error when running as a
      v3 directory authority.

  o Minor bugfixes (v3 directory protocol)
    - Delete unverified-consensus when the real consensus is set.
    - Consider retrying a consensus networkstatus fetch immediately after one
      fails: don't wait 60 seconds to notice.
    - When fetching a consensus as a cache, wait until a newer consensus
      exists before trying to replace the current one.

  o Minor bugfixes (controller):